hphp/hack/test/typecheck/reactive/owned_mutable7.php.exp
File "owned_mutable7.php", line 5, characters 17-38:
__OwnedMutable annotated parameters are only allowed in reactive functions. (Parsing[1002])
