hphp/hack/test/typecheck/reactive/owned_mutable7.php
<?hh // partial

function f(): void {
  // ERROR
  $z = function(<<__OwnedMutable>> A $c): void {
  };
}
